# parsekit-converter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: converter.py  exceptions.py  main.py  models.py
docs/: errors.md
tests/: conftest.py  test_converter.py  test_main.py
