[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsekit-converter"
version = "0.1.2"
description = "LibreOffice-based document to PDF conversion API"
readme = "README.md"
license = "MIT"
authors = [{ name = "agent-hanju", email = "agent.hanju@gmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.urls]
Repository = "https://github.com/agent-hanju/parsekit-converter"

[project.scripts]
parsekit-converter = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
